Fix build by using JS version of dynamic faculty page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "TSC_COMPILE_ON_ERROR=true next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
